--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             margin: 0;
             background: linear-gradient(135deg, #ff9a9e, #fad0c4);
             font-family: 'Arial', sans-serif;
+            overflow: hidden;
         }
         .card {
             text-align: center;
@@ -20,6 +21,8 @@
             padding: 2rem;
             border-radius: 20px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            max-width: 90%;
+            height: 250px;
         }
         .card h1 {
             font-size: 2.5rem;
@@ -39,17 +42,116 @@
             font-size: 1rem;
             cursor: pointer;
             transition: background-color 0.3s;
+            margin: 0.5rem;
         }
         .card button:hover {
             background-color: #d62828;
         }
+        .card button.no {
+            background-color: #6c757d;
+            position: relative;
+            transition: left 0.5s ease, top 0.5s ease;
+        }
+        .card button.no:hover {
+            background-color: #5a6268;
+        }
+        .gif-container {
+            display: none;
+            margin-top: 2rem;
+        }
+        .gif-container img {
+            max-width: 100%;
+            border-radius: 10px;
+        }
+        .restart-container {
+            display: none;
+            margin-top: 2rem;
+        }
+        .restart-container button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 0.8rem 1.5rem;
+            border-radius: 10px;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .restart-container button:hover {
+            background-color: #0056b3;
+        }
+        @media (max-width: 600px) {
+            .card h1 {
+                font-size: 2rem;
+            }
+            .card p {
+                font-size: 1rem;
+            }
+            .card button {
+                font-size: 0.9rem;
+                padding: 0.6rem 1rem;
+            }
+        }
+        .flex {
+          display: flex;
+          justify-content: center;
+          margin-left: 10px;
+        }
     </style>
+    <script>
+        function moveButton() {
+            const button = document.querySelector('.no');
+            const x = Math.random() * (window.innerWidth - button.offsetWidth);
+            const y = Math.random() * (window.innerHeight - button.offsetHeight);
+            button.style.left = `${x}px`;
+            button.style.top = `${y}px`;
+        }
+
+        function showGif() {
+            const gifContainer = document.querySelector('.gif-container');
+            const yesButton = document.querySelector('button[onclick="showGif()"]');
+            const noButton = document.querySelector('.no');
+            const restartContainer = document.querySelector('.restart-container');
+            const paragraph = document.querySelector('.card p');
+            const header = document.querySelector('.card h1');
+
+            gifContainer.style.display = 'block';
+            yesButton.style.display = 'none';
+            noButton.style.display = 'none';
+            restartContainer.style.display = 'block';
+            paragraph.style.display = 'none';
+            header.textContent = 'YOU SAID YES';
+        }
+
+        function restartPage() {
+            location.reload();
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const noButton = document.querySelector('.no');
+            noButton.style.position = 'absolute';
+            noButton.addEventListener('mouseover', moveButton);
+            noButton.addEventListener('click', moveButton);
+        });
+    </script>
 </head>
 <body>
     <div class="card">
-        <h1>Will You Be My Valentine?</h1>
+        <h1>Hi Bubs, Will You Be My Valentine?</h1>
         <p>You make every day special, and I can’t imagine Valentine’s Day without you. ❤</p>
-        <button onclick="alert('Yay! I knew you would say yes! ❤')">Yes</button>
+        <div class="flex">
+            <button onclick="showGif()">Yes</button>
+        </div>
+        <div class="flex">
+            <button class="no">No</button>
+        </div>
+        <div class="gif-container">
+            <img src="https://media.tenor.com/PXKZhCEfEfsAAAAi/bubu-bubu-dudu.gif" alt="Celebration GIF">
+            <p>Thank you for being my Valentine Bubby!! ❤ See you on the 14th Feb for Spanish Dinner</p>
+        </div>
+        <div class="restart-container">
+            <button onclick="restartPage()">Restart</button>
+        </div>
     </div>
 </body>
 </html>
