--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="card">
         <h1>Hi Bubs, Will You Be My Valentine?</h1>
         <div >
-            <img src="https://instagram.fsin14-1.fna.fbcdn.net/v/t51.2885-15/473910862_18027828275558043_3115173514300766512_n.jpg?stp=dst-jpg_e15_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6ImltYWdlX3VybGdlbi4xMTc5eDgzNy5zZHIuZjc1NzYxLmRlZmF1bHRfaW1hZ2UifQ&_nc_ht=instagram.fsin14-1.fna.fbcdn.net&_nc_cat=103&_nc_ohc=6Fem67kNefUQ7kNvgHFd7jL&_nc_gid=8ec831be2e9e4e8c89c17be7827e57b6&edm=APs17CUBAAAA&ccb=7-5&ig_cache_key=MzU0NzY4MTc1NjIzMTIyODk1MQ%3D%3D.3-ccb7-5&oh=00_AYCaRW7EF39RnmPeo3DZoF8yR6mN-JyWqqfIBS7heI7MeQ&oe=679D280B&_nc_sid=10d13b" alt="Valentine Cat">
+            <img src="./Cat.jpg" alt="Valentine Cat">
         </div>
         <p>You make every day special, and I can’t imagine Valentine’s Day without you. ❤</p>
         <div class="flex">
