--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="card">
         <h1>Hi Bubs, Will You Be My Valentine?</h1>
         <div >
-            <img src="./Cat.jpg" alt="Valentine Cat2" style="height: 200px; width: 300px;">
+            <img src="./Cat.jpg" alt="Valentine Cat2" style="height: 100; width: 150;">
         </div>
         <p>You make every day special, and I can’t imagine Valentine’s Day without you. ❤</p>
         <div class="flex">
@@ -158,7 +158,7 @@
         </div>
         <div class="gif-container">
             <img src="https://media.tenor.com/PXKZhCEfEfsAAAAi/bubu-bubu-dudu.gif" alt="Celebration GIF">
-            <p>Thank you for being my Valentine Bubby!! ❤ See you on the 14th Feb for Spanish Dinner</p>
+            <p>Thank you for being my Valentine Bubby!! ❤ See you on the 14th Feb for a Spanish Dinner, Flowers and Chocies!</p>
         </div>
         <div class="restart-container">
             <button onclick="restartPage()">Restart</button>
