--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="card">
         <h1>Hi Bubs, Will You Be My Valentine?</h1>
         <div >
-            <img src="./Cat.jpg" alt="Valentine Cat2" style="height: 100; width: 150;">
+            <img src="./Cat.jpg" alt="Valentine Cat2" style="height: 100px; width: 150px;">
         </div>
         <p>You make every day special, and I can’t imagine Valentine’s Day without you. ❤</p>
         <div class="flex">
