--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
             align-content: center;
             flex-direction: row;
         }
+        .img {
+            display: flex;
+        }
 
     </style>
     <script>
@@ -122,6 +125,7 @@
             const restartContainer = document.querySelector('.restart-container');
             const paragraph = document.querySelector('.card p');
             const header = document.querySelector('.card h1');
+            const image = document.querySelector('.img');
 
             gifContainer.style.display = 'block';
             yesButton.style.display = 'none';
@@ -129,6 +133,7 @@
             restartContainer.style.display = 'block';
             paragraph.style.display = 'none';
             header.textContent = 'YOU SAID YES';
+            image.style.display = 'none';
         }
 
         function restartPage() {
@@ -147,7 +152,7 @@
     <div class="card">
         <h1>Hi Bubs, Will You Be My Valentine?</h1>
         <div >
-            <img src="./Cat.jpg" alt="Valentine Cat2" style="height: 100px; width: 150px;">
+            <img class="img" src="./Cat.jpg" alt="Valentine Cat2" style="height: 100px; width: 150px;">
         </div>
         <p>You make every day special, and I can’t imagine Valentine’s Day without you. ❤</p>
         <div class="flex">
