--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
         }
         .img {
             display: flex;
+            justify-content: center;
+            align-content: center;
         }
 
     </style>
